[gd_scene load_steps=5 format=3 uid="uid://mj4qdlfjjcmc"]

[ext_resource type="Script" path="res://characters/1_full_bodies/full_human_body.gd" id="1_atrc8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_olcqk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1wngd"]
radius = 0.25

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_fkdda"]
properties/0/path = NodePath("Skeleton3D/CoreBone:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("Skeleton3D/CoreBone:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:body_type")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:body_top_color")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:body_bottom_color")
properties/4/spawn = true
properties/4/replication_mode = 2

[node name="FullHumanBody" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5416, 0)
script = ExtResource("1_atrc8")

[node name="Skeleton3D" type="Skeleton3D" parent="."]
bones/0/name = "Bone"
bones/0/parent = -1
bones/0/rest = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, -1.13591, 0)
bones/0/enabled = true
bones/0/position = Vector3(0, -1.13591, 0)
bones/0/rotation = Quaternion(0, 0.707107, 0, 0.707107)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "Bone.001"
bones/1/parent = 0
bones/1/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1114, 0)
bones/1/enabled = true
bones/1/position = Vector3(0, 1.1114, 0)
bones/1/rotation = Quaternion(0, 0, 0, 1)
bones/1/scale = Vector3(1, 1, 1)

[node name="CoreBone" type="PhysicalBone3D" parent="Skeleton3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.536666, 0)
collision_layer = 4
collision_mask = 4
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.599244, 0)
body_offset = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 0, 0.599244, 0)
bone_name = "Bone"

[node name="HeadCollision" type="CollisionShape3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.272408, -0.287295)
shape = SubResource("BoxShape3D_olcqk")

[node name="BodyCollision" type="CollisionShape3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.955045, 0)
shape = SubResource("CapsuleShape3D_1wngd")

[node name="HeadPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.428056, 0)

[node name="BodyPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.469513, 0)

[node name="LeftHandPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -0.3, -1.08144, 0)

[node name="RightHandPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0.3, -1.08144, 0)

[node name="LeftFootPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -0.3, -2, 0)

[node name="RightFootPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0.3, -2, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_fkdda")

[node name="BodyUpdateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="BodyUpdateTimer" to="." method="_on_body_update_timer_timeout"]
